# exomind

./: .gitignore  .gitlab-ci.yml  .gitmodules  .tool-versions  Cargo.toml  Cross.toml  Dockerfile  Exocore.podspec  LICENSE  README.md  app.yaml  azure-pipelines.yml  build.rs  codecov.yml  exomind.fd  format.sh  lint.sh  mlc_config.json  package-lock.json  package.json  rustfmt-nightly.toml  tsconfig.json
3rd/if-watch/: Cargo.toml
3rd/if-watch/src/: apple.rs  lib.rs
app/: Cargo.toml
app/src/: lib.rs
app/tools/: build.sh
apps/host/: Cargo.toml
apps/host/fixtures/: example.wasm
apps/host/src/: error.rs  lib.rs
apps/macros/: Cargo.toml
apps/macros/src/: lib.rs
apps/runtime/: Cargo.toml
apps/runtime/fixtures/: example.wasm
apps/runtime/src/: apps.rs  config.rs  error.rs  lib.rs  main.rs  runtime.rs
apps/sdk/: Cargo.toml
apps/sdk/src/: app.rs  binding.rs  executor.rs  lib.rs  store.rs  time.rs
chain/: Cargo.toml
chain/src/: block.rs  data.rs  lib.rs  operation.rs  tests_utils.rs
chain/src/chain/: data.rs  error.rs  mod.rs
chain/src/engine/: config.rs  error.rs  handle.rs  mod.rs  request_tracker.rs  sync_context.rs  testing.rs
chain/src/pending/: error.rs  memory.rs  mod.rs
chain/tests/: engine.rs
cli/: Cargo.toml
cli/src/: cell.rs  config.rs  logging.rs  main.rs  options.rs  server.rs
clients/android/: Cargo.toml  README.md  build.sh  build_openssl.sh  env.sh
clients/c/: Cargo.toml  README.md
clients/c/src/: client.rs  discovery.rs  lib.rs  node.rs  utils.rs
clients/c/tools/: generate.sh
clients/ios/: .gitattributes  Cargo.toml  README.md  cbindgen.toml  exocore.h  generate.sh  generate_binding.sh
clients/ios/src/: lib.rs  logging.rs
clients/ios/swift/: Cell.swift  Discovery.swift  EXOMutationBuilder.swift  EXOQueryBuilder.swift  EXOStore.swift  ExocoreClient.swift  Extensions.swift  MutationBuilder.swift  Node.swift  QueryBuilder.swift  Store.swift
clients/ios/tools/: build.sh  generate.sh
clients/ios/xcode/: .gitignore
clients/wasm/: .gitignore  Cargo.toml  README.md  generate.sh  index.js  package-lock.json  package.json
clients/wasm/js/: index.d.ts  index.js  proto.d.ts  proto.js
clients/wasm/src/: client.rs  js.rs  lib.rs  main.rs  mutation.rs  query.rs  watched_query.rs  ws.rs
clients/wasm/web/: package-lock.json  webpack.config.js
clients/web/: .gitattributes  .gitignore  .npmignore  Cargo.toml  README.md  generate_protos.sh  package-lock.json  package.json  tsconfig.json
clients/web/js/: index.d.ts  index.js  proto.d.ts  proto.js  protos.js
clients/web/pkg/: exocore_client_web.d.ts  exocore_client_web.js  exocore_client_web_bg.d.ts  exocore_client_web_bg.js  exocore_client_web_bg.wasm
clients/web/src/: client.rs  discovery.rs  js.rs  lib.rs  node.rs  watched_query.rs
clients/web/tools/: build.sh  generate_protos.sh
clients/web/ts/: cell.ts  discovery.ts  index.ts  registry.ts  store.ts  wasm.ts
clients/web/tsp/: index.d.ts  index.js  index.js.map
common/: Cargo.toml  build.rs
common/benches/: capnp_frame.rs  capnp_msg.rs
common/proto/: common.capnp  data_chain.capnp  data_transport.capnp
common/protos/: common.capnp  dynamic.proto  index_transport.capnp  reflect.proto
common/src/: cell.rs  lib.rs  logging.rs  node.rs  range.rs  tests_utils.rs  time.rs  transport.rs  utils.rs
common/src/crypto/: hash.rs  keys.rs
common/src/framing/: capnp.rs  compound.rs  error.rs  mod.rs  multihash.rs  padded.rs  sized.rs
common/src/futures/: mod.rs  spawn_tokio.rs
common/src/protos/: common_capnp.rs  dynamic.rs  (+8 more)
core/: Cargo.toml  build.rs
core/benches/: capnp_frame.rs
core/src/: build.rs  cell.rs  lib.rs  logging.rs  node.rs  protos.rs  tests_utils.rs
data/: Cargo.toml  build.rs  replication.md
data/fbs/: chain_schema.fbs  test.capnp
data/proto/: chain_block.capnp
data/src/: block.rs  engine.rs  lib.rs  operation.rs  pending.rs  replicator.rs  serialization.rs  serialize.rs  simulator.rs  tests_utils.rs  transport.rs  utils.rs  wal.rs
data/tests/: engine.rs
data/util/: generate_flatbuffers.sh
data/utils/: generate_flatbuffers.sh
discovery/: Cargo.toml
discovery/src/: client.rs  lib.rs  payload.rs
discovery/tests/: discovery.rs
exm/: Cargo.toml  Dockerfile.buildx
exm/src/: cli.rs  main.rs
exo/: Cargo.toml
exo/src/: app.rs  cell.rs  config.rs  daemon.rs  disco.rs  keys.rs  logging.rs  main.rs  node.rs  options.rs  sec.rs  server.rs  term.rs  utils.rs
exocore/: .tool-versions  Cargo.toml  Exocore.podspec  README.md  package-lock.json  package.json
exocore/chain/: Cargo.toml  replication.md
exocore/core/: Cargo.toml
exocore/discovery/: Cargo.toml
exocore/exo/: Cargo.toml  Dockerfile.buildx
exocore/protos/: Cargo.toml  build.rs
exocore/store/: Cargo.toml
exocore/tools/: bump_version.sh  coverage.sh  generate_protos.sh  install.sh  pre_commit.sh
exocore/transport/: Cargo.toml
exomind/: Cargo.toml  README.md  app.yaml  exomind.fd
exomind/app/: Cargo.toml
exomind/browsers/: README.md
exomind/exm/: Cargo.toml  Dockerfile.buildx
exomind/ios/: Podfile  appcenter-post-clone.sh
exomind/protos/: Cargo.toml
exomind/tools/: clippy.sh  generate_protos.sh  pre_commit.sh
exomind/web/: README.md  package.json  webpack.ios.js
index/: Cargo.toml
index/src/: entity.rs  error.rs  index.rs  lib.rs  main.rs  mutation.rs  ordering.rs  query.rs  results.rs  sorting.rs  store.rs
protos/: Cargo.toml  build.rs  common.capnp
protos/exomind/: base.proto
protos/src/: base64.rs  error.rs  lib.rs  prost.rs  reflect.rs  registry.rs  stepan.rs  time.rs
schema/: Cargo.toml
schema/src/: entity.rs  error.rs  lib.rs  schema.rs  serialization.rs  test_schema.rs  tests_utils.rs
server/: Cargo.toml  Dockerfile.buildx  README.md
server/src/: cli.rs  exomind.rs  logging.rs  main.rs
store/: Cargo.toml
store/src/: entity.rs  error.rs  lib.rs  mutation.rs  ordering.rs  query.rs  store.rs
transport/: Cargo.toml
transport/src/: completion.rs  either.rs  error.rs  errors.rs  layer.rs  lib.rs  messages.rs  mock.rs  streams.rs  testing.rs  transport.rs
(+972 files in other folders)
