[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["command-line-interface", "email", "text-editors"]
description = "CLI for Exomind, a personal knowledge management tool"
edition = "2021"
keywords = ["knowledge-management", "mobile", "decentralized", "webapp"]
exclude = ["browsers", "ios", "web", "tools", "examples"]
license = "Apache-2.0"
name = "exomind"
repository = "https://github.com/appaquet/exomind"
version = "0.1.12"

[dependencies]
exomind-protos = {path = "./protos", version = "0.1.12"}

[workspace]
exclude = [
  "3rd",
]
members = [
  "app",
  "protos",
  "integrations/gmail",
  "exm",
]

[profile.release]
codegen-units = 1
lto = "thin"

# [patch.crates-io]
# exocore = {path = "../exocore"}
# exocore = { git = "https://github.com/appaquet/exocore.git", tag = "v0.1.18" }
# exocore = {git = "https://github.com/appaquet/exocore.git"}
