[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
name = "exomind-app"
version = "0.1.4"

[lib]
crate-type = ['cdylib']

[dependencies]
anyhow = "1.0"
exocore = { version = "0.1.6", default-features = false, features = ["apps-sdk"]}
exomind-protos = {version = "0.1.4", path = "../protos"}
futures = "0.3"
log = "0.4"