[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Storage of Exocore (Distributed applications framework)"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-chain"
repository = "https://github.com/appaquet/exocore"
version = "0.1.25"

[features]
default = ["engine", "directory-chain", "memory-pending"]
directory-chain = ["mmap", "extindex"]
engine = ["exocore-core/runtime"]
memory-pending = []
mmap = ["memmap2"]
tests-utils = ["engine", "tempfile", "directory-chain", "memory-pending", "exocore-core/tests-utils", "exocore-transport/tests-utils"]

[dependencies]
anyhow = "1.0.74"
byteorder = "1.4.3"
exocore-core = {version = "0.1.25", path = "../core"}
exocore-protos = {version = "0.1.25", path = "../protos"}
exocore-transport = {version = "0.1.25", path = "../transport", default-features = false}
futures = "0.3.28"
itertools = "0.11.0"
log = "0.4.20"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.47"
bytes = "1.4.0"

# For directory chain
extindex = { version = "0.5.0", optional = true }
memmap2 = { version = "0.7.1", optional = true }

# For tests
tempfile = { version = "3.7.1", optional = true }

[dev-dependencies]
exocore-core = {version = "0.1.25", path = "../core", features = ["tests-utils"]}
exocore-transport = {version = "0.1.25", path = "../transport", features = ["tests-utils"]}
tempfile = "3.7.1"
tokio = { version = "1.31.0", features = ["macros"], default-features = false }

[[test]]
name = "engine"
required-features = ["tests-utils"]
