[package]
name = "exocore-cli"
version = "0.1.0"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2018"

[dependencies]
exocore-data = { path = "../data", features = ["engine", "directory_chain", "memory_pending"] }
exocore-index = { path = "../index", features = ["local_store"] }
exocore-common = { path = "../common" }
exocore-transport = { path = "../transport", features = ["websocket_transport", "libp2p_transport"] }
log = "0.4"
structopt = "0.2"
log4rs = "0.8"
failure = "0.1"
futures = "0.1"
tokio = { version = "0.1", features = ["io"], default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"