[package]
name = "exocore-common"
version = "0.1.0"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2018"

[features]
tests_utils = ["log4rs"]

[dependencies]
exocore-schema = { path = "../schema" }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
parity-multihash = "0.1"
sha3 = "0.8"
bs58 = "0.3"
capnp = { git = "https://github.com/appaquet/capnproto-rust.git", branch = "thread-safe-arena-readlimiter" }
byteorder = "1.2"
owning_ref = "0.4"
lazycell = "1.2"
failure = "0.1"
futures = "0.1"
libp2p-core = "0.13"
log4rs = { version = "0.8", optional = true }
chrono = "0.4"
wasm-timer = "0.1"

[target."cfg(all(target_arch = \"wasm32\", target_os = \"unknown\"))".dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] } # serde for serialization from JsValue
wasm-bindgen-futures = "0.3"

[target."cfg(not(all(target_arch = \"wasm32\", target_os = \"unknown\")))".dependencies]
tokio = { version = "0.1", features = ["io"], default-features = false }

[build-dependencies]
capnpc = { git = "https://github.com/appaquet/capnproto-rust.git", branch = "thread-safe-arena-readlimiter" }

[dev-dependencies]
tempdir = "0.3"
log4rs = "0.8"
criterion_bencher_compat = "0.3"
tokio = { version = "0.1", features = ["rt-full"] }

[[bench]]
name = "capnp_frame"
harness = false
