[package]
name = "exocore-common"
description = "Core of Exocore (Distributed applications framework)"
version = "0.1.0"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2018"
keywords = ["networking", "mobile", "web", "framework", "ios", "android", "webassembly", "storage", "database"]
categories = ["Database implementations", "Command-line interface", "WebAssembly", "Web programming"]
repository = "https://github.com/appaquet/exocore"
license = "MIT"

[features]
tests_utils = ["log4rs", "tokio-compat", "runtime"]
runtime = ["tokio-compat", "tokio/full"]

[dependencies]
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
parity-multihash = "0.2"
sha3 = "0.8"
bs58 = "0.3"
capnp = { git = "https://github.com/appaquet/capnproto-rust.git", branch = "thread-safe-arena-readlimiter" }
byteorder = "1.2"
failure = "0.1"
libp2p-core = "0.13"
chrono = "0.4"
wasm-timer = "0.2"
futures = { version = "0.3", features = ["async-await", "compat"] }
futures01 = { package = "futures", version = "0.1" }
tokio01 = { version = "0.1", package = "tokio", features = ["io"], default-features = false }
tokio = { version = "0.2", features = ["rt-core", "blocking"], default-features = false }
log4rs = { version = "0.9", optional = true }
tokio-compat = { version = "0.1", features = ["blocking"], optional = true }
protobuf = { version = "2", features = ["with-bytes"] }

[target."cfg(all(target_arch = \"wasm32\", target_os = \"unknown\"))".dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] } # serde for serialization from JsValue
wasm-bindgen-futures = "0.4"

[build-dependencies]
capnpc = { git = "https://github.com/appaquet/capnproto-rust.git", branch = "thread-safe-arena-readlimiter" }
protoc-rust = "2.0"

[dev-dependencies]
tempdir = "0.3"
log4rs = "0.9"
criterion_bencher_compat = "0.3"
tokio = { version = "0.2", features = ["blocking"] }
tokio-compat = { version = "0.1", features = ["blocking"] }

[[bench]]
name = "capnp_frame"
harness = false
