[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Core of Exocore (Distributed applications framework)"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-core"
repository = "https://github.com/appaquet/exocore"
version = "0.1.25"

[features]
logger = ["log4rs"]
runtime = [
  "tokio/io-util",
  "tokio/io-std",
  "tokio/net",
  "tokio/rt",
  "tokio/rt-multi-thread",
  "tokio/sync",
  "tokio/time",
  "tokio/macros",
]
tests-utils = ["runtime", "logger"]
web = [
  "getrandom/js", # see https://docs.rs/getrandom/0.2.0/getrandom/#webassembly-support  
  "web-sys",
]

[dependencies]
anyhow = "1.0.79"
bs58 = "0.5.0"
byteorder = "1.5.0"
bytes = "1.5.0"
chrono = "0.4.31"
exocore-protos = {version = "0.1.25", path = "../protos"}
futures = { version = "0.3.30", features = ["async-await"] }
libp2p = { version = "0.52.4", features = ["noise", "secp256k1"], default-features = false }
libp2p-identity = { version = "0.2.8", features = ["secp256k1", "ed25519"], default-features = false }
log = "0.4.20"
log4rs = { version = "1.2.0", optional = true }
multihash = "0.19.1"
multihash-codetable = {version="0.1", features=["digest", "sha3"]}
multihash-derive = {version="0.9"}
petname = "1.1.3"
rand = "0.8"
serde = "1.0.195"
serde_derive = "1.0.193"
serde_json = "1.0.111"
serde_yaml = "0.9.30"
shadow-rs = { version = "0.26.0", default-features = false }
thiserror = "1.0.56"
url = "2.5.0"
uuid = { version = "1.4.1", features = ["v4", "wasm-bindgen"] }
wasm-timer = "0.2.5"

# web
web-sys = { version = "0.3.67", features = ["Storage"], optional = true }

[target."cfg(target_arch = \"wasm32\")".dependencies]
getrandom = "0.2.12"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
chrono = { version = "0.4.31", default-features = false, features = [] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35.1", features = ["rt"], default-features = false }

[build-dependencies]
shadow-rs = { version = "0.26.0", default-features = false }

[dev-dependencies]
criterion_bencher_compat = "0.4.0"
log4rs = "1.2.0"
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread", "time"], default-features = false }

[[bench]]
harness = false
name = "capnp_frame"
