[package]
name = "exocore-data"
version = "0.1.0"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2018"

[features]
tests_utils = ["tempdir", "exocore-common/tests_utils", "exocore-transport/tests_utils"]

[dependencies]
exocore-common = { path = "../common" }
exocore-transport = { path = "../transport" }
log = "0.4"
futures = "0.1"
tokio = { version = "0.1", features = ["io"] }
memmap = "0.7"
byteorder = "1.2"
failure = "0.1"
itertools = "0.8"
extindex = "0.2"
serde = "1.0"
serde_derive = "1.0"
tempdir = { version = "0.3", optional = true }

[dev-dependencies]
exocore-common = { path = "../common", features = ["tests_utils"] }
exocore-transport = { path = "../transport", features = ["tests_utils"] }
tempdir = "0.3"

[[test]]
name = "engine"
required-features = ["tests_utils"]