[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Distributed applications framework"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-discovery"
repository = "https://github.com/appaquet/exocore"
version = "0.1.25"

[features]
default = ["server"]
server = ["hyper", "tokio"]

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
log = "0.4.21"
rand = "0.8"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.198"
serde_derive = "1.0.197"
serde_json = "1.0.116"
thiserror = "1.0.59"
wasm-timer = "0.2.5"

# For server
hyper = { version = "0.14.28", features = ["full"], optional = true }
tokio = { version = "1.38.0", default-features = false, features = ["macros", "time"], optional = true }

[[test]]
name = "discovery"
required-features = ["server"]
