[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "CLI for Exocore (Distributed applications framework)"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exo"
repository = "https://github.com/appaquet/exocore"
version = "0.1.25"

[dependencies]
anyhow = { version="1.0.72", features = ["backtrace"] }
bytes = "1.4.0"
clap = { version = "4.3.21", features = ["derive", "env"] }
console = "0.15.7"
dialoguer = "0.10.4"
dirs-next = "2.0.0"
exocore-apps-host = {version = "0.1.25", path = "../apps/host"}
exocore-chain = {version = "0.1.25", path = "../chain"}
exocore-core = {version = "0.1.25", path = "../core", features = ["runtime", "logger"]}
exocore-discovery = {version = "0.1.25", path = "../discovery", features = ["server"]}
exocore-protos = {version = "0.1.25", path = "../protos"}
exocore-store = {version = "0.1.25", path = "../store"}
exocore-transport = {version = "0.1.25", path = "../transport", features = ["http-server"]}
futures = "0.3.28"
indicatif = "0.17.6"
log = "0.4.19"
log4rs = "1.2.0"
rand = "0.8"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
serde = "1.0.183"
serde_derive = "1.0.177"
serde_json = "1.0.104"
tempfile = "3.7.1"
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["macros"], default-features = false }
url = "2.4.0"
zip = { version = "0.6.6", features = ["deflate"], default-features = false }
