[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "CLI for Exocore (Distributed applications framework)"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exo"
repository = "https://github.com/appaquet/exocore"
version = "0.1.25"

[dependencies]
anyhow = { version="1.0.81", features = ["backtrace"] }
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
console = "0.15.8"
dialoguer = "0.11.0"
dirs-next = "2.0.0"
exocore-apps-host = {version = "0.1.25", path = "../apps/host"}
exocore-chain = {version = "0.1.25", path = "../chain"}
exocore-core = {version = "0.1.25", path = "../core", features = ["runtime", "logger"]}
exocore-discovery = {version = "0.1.25", path = "../discovery", features = ["server"]}
exocore-protos = {version = "0.1.25", path = "../protos"}
exocore-store = {version = "0.1.25", path = "../store"}
exocore-transport = {version = "0.1.25", path = "../transport", features = ["http-server"]}
futures = "0.3.30"
indicatif = "0.17.8"
log = "0.4.21"
log4rs = "1.3.0"
rand = "0.8"
reqwest = { version = "0.12.2", default-features = false, features = ["rustls-tls"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
tempfile = "3.10.1"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["macros"], default-features = false }
url = "2.5.0"
zip = { version = "0.6.6", features = ["deflate"], default-features = false }
