[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["command-line-interface", "email", "text-editors"]
description = "CLI for Exomind, a personal knowledge management tool"
edition = "2021"
keywords = ["knowledge-management", "mobile", "decentralized", "webapp"]
exclude = ["browsers", "ios", "web", "tools", "examples"]
license = "Apache-2.0"
name = "exomind"
repository = "https://github.com/appaquet/exomind"
version = "0.1.27"

[dependencies]
exomind-protos = { path = "./protos", version = "0.1.27" }
