[package]
name = "exocore-index"
version = "0.1.0"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2018"

[features]
default = ["local_store"]
local_store = ["tantivy", "exocore-data/engine", "crc"]

[dependencies]
exocore-data = { path = "../data" }
exocore-transport = { path = "../transport" }
exocore-common = { path = "../common" }
exocore-schema = { path = "../schema" }
failure = "0.1"
itertools = "0.8"
maplit = "1"
log = "0.4"
futures = "0.3"

# Schema
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
chrono = { version = "0.4", features = ["serde"] }

# Local store
tantivy = { version = "0.11", optional = true }
crc = { version = "1.8", optional = true }

[dev-dependencies]
tempdir = "0.3"
exocore-data = { path = "../data", features = ["tests_utils"] }
exocore-common = { path = "../common", features = ["tests_utils"] }
exocore-schema = { path = "../schema", features = ["tests_utils"] }
